update: 添加玩家信息更新和身价购买接口到swagger
