# app/Http/Controllers/Wechat/PointsController.php
@@ -9,6 +9,40 @@ use Illuminate\Support\Facades\DB;
 
 class PointsController extends MiniProgramController
 {
+    /**
+     * @param Request $request
+     * @return array
+     *
+     * @SWG\Post(
+     *     path="/points/purchase",
+     *     description="购买身价",
+     *     operationId="point.purchase",
+     *     tags={"point"},
+     *
+     *     @SWG\Parameter(
+     *         name="points",
+     *         description="身价数量",
+     *         in="query",
+     *         required=true,
+     *         type="integer",
+     *     ),
+     *
+     *     @SWG\Response(
+     *         response=200,
+     *         description="购买成功",
+     *         @SWG\Schema(
+     *             ref="#/definitions/Success",
+     *         ),
+     *     ),
+     *     @SWG\Response(
+     *         response=422,
+     *         description="请求参数验证失败",
+     *         @SWG\Schema(
+     *             ref="#/definitions/ValidationError",
+     *         ),
+     *     ),
+     * )
+     */
     public function purchase(Request $request)
     {
         $request->validate([
